@@ -90,6 +90,7 @@ AC_DEFUN(APACHE_GEN_CONFIG_VARS,[
   APACHE_SUBST(INSTALL_PROG_FLAGS)
   APACHE_SUBST(DSO_MODULES)
   APACHE_SUBST(ENABLED_DSO_MODULES)
+  APACHE_SUBST(LOAD_ALL_MODULES)
   APACHE_SUBST(APR_BINDIR)
   APACHE_SUBST(APR_INCLUDEDIR)
   APACHE_SUBST(APR_VERSION)
